--- a/src/main/resources/errors-list.properties
+++ b/src/main/resources/errors-list.properties
@@ -10,3 +10,4 @@
 ### Application errors ###
 1004=Invalid pet status
 1005=Error while calling {0} API from PetStore
+1006=Error while parsing mock json response file
